<resources>
    <string name="app_name">AppUITest</string>
    <string name="menu">Menu</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="post_for_help">Post For Help</string>
    <string name="help_feed">Help Feed</string>
    <string name="monitor_user">Monitor User</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_sign_up_here">Don’t have an account? Sign up here.</string>
    <string name="login">Login</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="sign_up_with_facebook">Sign Up with Facebook</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account_log_in_here">Already have an account? Log in here.</string>
    <string name="create_an_account">Create an Account</string>
</resources>