<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/ic_vector_header"
        android:elevation="-.1dp"/>

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:orientation="horizontal"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_applogo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoeui"
            android:layout_marginStart="10dp"
            android:textSize="25sp"
            android:textColor="#FFF"
            android:text="@string/login"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menuButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:elevation="1.5dp"
        android:layout_below="@id/header"
        android:background="@drawable/menu_button">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="15dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress|textNoSuggestions"
                android:background="@drawable/custom_edittext"
                android:hint="@string/username_or_email"
                android:fontFamily="@font/segoeui"
                android:paddingStart="18dp"
                android:paddingEnd="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:textSize="20sp"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_user_logo"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress|textNoSuggestions"
                android:background="@drawable/custom_edittext"
                android:hint="@string/password"
                android:fontFamily="@font/segoeui"
                android:paddingStart="18dp"
                android:paddingEnd="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:textSize="20sp"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_key"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"/>
            <TextView
                android:id="@+id/signup_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/don_t_have_an_account_sign_up_here"
                android:textAlignment="center"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#797979"
                android:fontFamily="@font/segoeui"/>
            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="70dp"
                android:background="@drawable/custom_button"
                android:fontFamily="@font/segoebold"
                android:padding="20dp"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="15sp" />






        </LinearLayout>
    </LinearLayout>
</RelativeLayout>